<resources>
    <string name="app_name">VIT Hack</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="email_title">Email ID</string>
    <string name="password_title">Password</string>
    <string name="sign_in_title">Sign In</string>
    <string name="invalid_email_toast">Please Enter Valid Email!</string>
    <string name="authenticated">Authenticated</string>
    <string name="logout_title">Logout</string>
    <string name="user_name_title">User Name</string>
    <string name="phone_number_title">Phone Number</string>
    <string name="vitian_title">Are you a VITian?</string>
    <string name="submit_title">Submit</string>
    <string name="reg_number_title">Registration Number</string>
    <string name="room_number_title">Room Number</string>
    <string name="enter_details">Enter all the text fields</string>

    //Welcome
    <string name="welcome_sub">How would you like to Sign Up?</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="continue_with_email">Continue With Email</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="login">Login</string>

    //Splash
    <string name="fetching_user_info">Fetching User Info</string>
    <string name="auth_in_progress">Authentication in Progress</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //SignUp
    <string name="already_a_user">Already a User? Sign In</string>
    <string name="sign_up">Sign Up</string>

    //SignIn
    <string name="welcome">Welcome!</string>
    <string name="lets_get_you_started">Let\'s get you started</string>
    <string name="email_addr">Email Address</string>
    <string name="password">Password</string>
    <string name="enter_email">Enter Email Address</string>
    <string name="enter_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>

    //Setup
    <string name="about_you">About You</string>
    <string name="about_you_sub">Alright, tell us about yourself</string>
    <string name="your_name">Your Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="institution_name">Institution\'s Name</string>
    <string name="enter_institution_name">Your Institution\'s Name</string>
    <string name="reg_no">Registration Number</string>
    <string name="enter_reg_no">Enter your Registration Number</string>

    //Phone
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_sub">Enter your Phone Number so that we can send updates</string>
    <string name="enter_phone_number">Enter your phone number</string>
    <string name="continue_btn">Continue</string>

    //DynamicFaq
    <string name="ask_a_ques">Ask a Question</string>
    <string name="ask_ques">Ask Question</string>
    <string name="cancel">Cancel</string>
    <string name="type_quesion">Type your question</string>
    <string name="faq_title">FAQ</string>
    <string name="search_hint">Search FAQ</string>
    <string name="search_title">Search</string>

    //Timeline
    <string name="timeline_text">Timeline</string>
    <string name="start_timeline">START</string>
    <string name="timeline_session_start_time">9:00 AM</string>
    <string name="timeline_session_title">Inauguration</string>

    //Domains
    <string name="domain_machine_learning">Machine Learning</string>
    <string name="domain_show_more_button">Show more</string>
    <string name="domain_text">Domains</string>

    //ProblemStatement
    <string name="problem_statement_text">Domains</string>

    //Profile
    <string name="vit_hack_text">VITHack 2020</string>
    <string name="whats_up_text">What\'s up</string>
    <string name="are_you_enjoying">Are you enjoying VITHack?</string>
    <string name="your_name_text">Your Name</string>
    <string name="email_address">Email Address</string>
    <string name="registration_number">Registration Number</string>
    <string name="institute_text">Your Institute</string>
    <string name="logout_button">Log Out</string>
    <string name="dark_mode_text">DARK MODE</string>


    //Speakers
    <string name="collaborators">Collaborators</string>
    <string name="sponsor">Sponsors</string>
    <string name="about_us">About Us</string>
    <string name="join_now">Join Now</string>
    <string name="team">Team</string>
    <string name="collab_label">Spend some quality time with your inspirations!</string>

    //BottomNavHelpers
    <string name="timeline">Timeline</string>
    <string name="collabs">Collabs</string>
    <string name="Faq">Faq</string>
    <string name="profile">Profile</string>


    //Notification
    <string name="notification_channel_name">VIT Hack Updates</string>
    <string name="notification_channel_disp">Updates</string>

    //Domain
    <string name="domain_label">From Education to Open Innovation, choose your house!</string>
    <string name="show_more">Show More</string>
    <string name="problem_statement">Problem Statement</string>
    <string name="problem_statement_desc">This is a placeholder text , there will be some content here</string>
    <string name="special_thanks">Special Thanks to www.getillustrations.com</string>

    //About Us
    <string name="about_us_label">VIT Hack aims for participants to contribute their ideas as solutions to real-world problems. Problems are driven towards social causes! We wish you bring your best ideas and your willingness.</string>

    //On Boarding
    <string name="welcome_to_text">Welcome to</string>
    <string name="vit_hack">VIT HACK</string>
    <string name="placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="speaker">Speakers</string>
    <string name="download_ps">Download</string>
    <string-array name="on_boarding_array">
        <item>VIT Hack is one of the best Pan-Indian hackathons where participants creatively use cutting edge technology to solve societal problems, and compete for exciting prizes.</item>
        <item>Get a chance to learn, ideate and grow. Pitch your wildest ideas to real-life investors and win the opportunity of getting invested, internships and many more!</item>
        <item>From Mentor talks, webinars, mentorships, project collabs, workshops, forums to discuss and many more…VIT Hack being a major hackathon, compete at a high level and gain tremendous exposure.</item>
    </string-array>

</resources>
