<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/timeline"
        android:icon="@drawable/ic_baseline_star_24"
        android:title="@string/timeline" />
    <item
        android:id="@+id/speakers"
        android:icon="@drawable/ic_baseline_star_24"
        android:title="@string/speakers" />
    <item
        android:id="@+id/problemStatement"
        android:icon="@drawable/ic_baseline_star_24"
        android:title="@string/problem_statement_text" />
    <item
        android:id="@+id/faq"
        android:icon="@drawable/ic_baseline_star_24"
        android:title="@string/Faq" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_baseline_star_24"
        android:title="@string/profile" />
</menu>