<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.userDetails.generalDetails.GeneralDetailsForm">


    <EditText
        android:id="@+id/email_id_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:text="@string/email_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user_name_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="none"
        android:text="@string/user_name_title"
        app:layout_constraintEnd_toEndOf="@+id/email_id_edit_text"
        app:layout_constraintStart_toStartOf="@+id/email_id_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/email_id_edit_text" />

    <EditText
        android:id="@+id/phone_number_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:text="@string/phone_number_title"
        app:layout_constraintEnd_toEndOf="@+id/user_name_edit_text"
        app:layout_constraintStart_toStartOf="@+id/user_name_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/user_name_edit_text" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/vitian_title"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/vitian_check_box"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/phone_number_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_edit_text" />

    <CheckBox
        android:id="@+id/vitian_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/phone_number_edit_text"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <Button
        android:id="@+id/submit_general_details_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/vitian_check_box"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.18" />
</androidx.constraintlayout.widget.ConstraintLayout>