<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".ui.auth.welcome.Welcome">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_now_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/blue_accent"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/continue_with_email"
        android:textColor="#FFF"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:icon="@drawable/ic_email"
        app:iconTint="#FFF"
        app:layout_constraintBottom_toTopOf="@+id/continue_with_google_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continue_with_google_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/google_btn_color"
        android:fontFamily="@font/lato_bold"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/continue_with_google"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_google"
        app:iconTint="#FFF"
        app:layout_constraintBottom_toTopOf="@+id/welcome_progress"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_now_button"
        app:layout_constraintStart_toStartOf="@+id/sign_up_now_button" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/already_have_an_account"
        android:textAlignment="center"
        android:textColor="@color/primary_text_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.40"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/blue_accent"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView11"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/welcome"
        android:textColor="@color/primary_text_color"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/welcome_sub"
        android:textColor="@color/primary_text_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/welcome"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_now_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <ProgressBar
        android:id="@+id/welcome_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/welcome_progress_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/auth_in_progress"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/welcome_progress"
        app:layout_constraintStart_toStartOf="@+id/welcome_progress"
        app:layout_constraintTop_toBottomOf="@+id/welcome_progress" />

</androidx.constraintlayout.widget.ConstraintLayout>